--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,3 +1,25 @@
+* 2021/03/06 (土)
+ソフトウェアのドキュメントは不確かなものだなと思う。あったほうがいいのか、なくてもいいのかよくわからなくなってくる。いや、passenger のドキュメントとか rails guide とかは有益だと思うけど、社内ドキュメントとかそういうのが難しい。書いていて不安になってくる。
+
+マージナル・オペレーション16巻を読んだ。順当に終わった。もっと、ぐちゃぐちゃですべてが壊れていくような結末ではないかと予想していたけれど概ね平和裏に終わった。甘い理想を引き裂いて、悲惨な現実を突きつけてくる作品だと思っていたので拍子抜けした。ただ、登場人物たちにとっては、ベストエンディングだったかもしれない。
+
+ゴールデンゴールド8巻を読んだ。面白いのか面白くないのかよくわからない。怖い話のようでいて、そうでもない気がする。誰かが悪だと決めつけるわけでもなく、ゆるゆる流れていってるような。
+
+* 2021/03/05 (金)
+
+brew が壊れているらしくて変なメッセージが出る。
+
+* 2021/03/04 (木)
+呪術廻戦の15巻を見た。渋谷事変すごい面白い。釘崎野薔薇の退場。東堂のメンタル強さ。真人の領域展開と変身。虎杖の精神的成長。「拍手とは魂の喝采」のくだり、ハンターハンターのパクリやんけと思ったけど、ギリギリそうでもないかもしれない。面白いからいいか。大ゴマ実に格好良い。見せ場多い。そして決着。満身創痍のところに夏油がでてきて無双しているけどこれどうやって倒すんだろう。五条先生復活するには早すぎるし。
+
+* 2021/03/03 (水)
+単純にワクワクさせられるのは、やっぱり見たことのないものとかありえないものについて話を聞く、見るときかもしれない。
+
+* 2021/03/02 (火)
+常時起動していた slack を、見るときだけつけるようにした。それでだいぶ余計な時間が減った気がする。かわりに、誰かと会話することがなくなってしまった。人間関係作っていこうという気持ちが消えて、忍者のように隠れている。
+
+* 2021/03/01 (月)
+会社の評価制度には「組織貢献」という評価軸があって、つまりは会社の誰かにプラスになるような行いを求められている。これはプログラマとしての平常業務と違って、「こうすればよい」という働き方が見えない。そういうふわふわしたことがちょっと辛い。ただ、そういう少し枠組みから飛び出した働きが認められる評価制度があるということが大事なのかもしれない。
 
 * 2021/02/28 (日)
 「岸辺露伴は動かない」のアニメを見た。アニメ化された話は本当に先が読めなかったり怖かったりして、引き込まれる。流石に面白い。
