--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,3 +1,10 @@
+* 2021/03/07 (日)
+
+- https://github.com/gregjacobs/Autolinker.js
+- https://highlightjs.org/
+
+を入れた。
+
 * 2021/03/06 (土)
 ソフトウェアのドキュメントは不確かなものだなと思う。あったほうがいいのか、なくてもいいのかよくわからなくなってくる。いや、passenger のドキュメントとか rails guide とかは有益だと思うけど、社内ドキュメントとかそういうのが難しい。書いていて不安になってくる。
 
