--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,3 +1,18 @@
+* 2021/03/11 (木)
+みずみずしい体験に彩られた自己紹介を聞いて、華やかさに圧倒される。自分が小さくなったみたいな気持ち。これまでの自分の人生にこれほどのドラマがあっただろうか。いやない。
+
+* 2021/03/10 (水)
+
+好みは人それぞれだということがわかっているので、自分の好きなものをおすすめするということができない。
+
+* 2021/03/09 (火)
+
+全然親しくなく、興味もなく、関係性もない人の、面白い過去話。どれくらい興味を持てるか。
+
+* 2021/03/08 (月)
+
+golang のメモ取り始めた。
+
 * 2021/03/07 (日)
 
 - https://github.com/gregjacobs/Autolinker.js
