日記を書いた

--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,4 +1,47 @@
+* 2021/03/28 (日)
+rehype-mathjax 入れたいと思ったけどそもそも reorg-rehype が latex ブロックを解釈できてないから、どうしようもなかった。頑張ればできるかもしれないが、自分でプラグイン作る感じになりそう。辛い。
 
+* 2021/03/27 (土)
+大刀洗のため池で桜を見た。
+
+* 2021/03/26 (金)
+仕事して散髪してから田舎に行くという強行スケジュール。
+
+* 2021/03/25 (木)
+Nさんは、飛び込む力と、受け止める力。この二つが凄い。
+
+* 2021/03/24 (水)
+しばらく go の勉強さぼってたけど再開しよう。
+
+* 2021/03/23 (火)
+データ構造が透けて見えるアプリケーションは、良い。操作を予想することができるから。
+
+* 2021/03/22 (月)
+赤ちゃんの科学という動画を見た。生後9ヶ月まではあらゆる言語、あらゆる人種を区別する顔認識能力があるらしい。そして学習の効率化のために、その能力はすぐに失われ、最もよく使われる言語と、よく見かける人種に対する顔認識だけを行なうようになるらしい。あと、赤子は無能ではなく、現象をよく観察しているらしい。物体が重力に従って下に落ちることとか。だから色んな人、言語、場所、風景など体験させてあげることが良いのだという。
+
+* 2021/03/21 (日)
+白夜極光というゲームのクローズドβテストに参加してみた。面白いと思ったけど飽きてきた。引越し準備のため掃除をした。まずダンボール二箱。ちょっとずつやる。
+
+* 2021/03/20 (土)
+3人で集まってボードゲームやった後、マスターなんとかという喫茶店で食事会した。折りたたみ傘を買って帰った。疲れたのでお湯はりして浴槽に入ったら腰の痛みが少し柔らいだみたい。
+
+* 2021/03/19 (金)
+人間の寿命が伸びるほど幸運も不幸も経験するので、最終的にはバランス良く経験してから死ぬのではないか。
+
+* 2021/03/18 (木)
+弁当シリーズの中では、イベリコ豚重はかなり美味いと思う。あとは野菜を。牛カルビ重は味が濃すぎる。
+
+* 2021/03/17 (水)
+フレンチクルーラーは400キロカロリーもあるのに美味しくはなかった。
+
+* 2021/03/16 (火)
+スタイルシートクラス名は意味を与えるよりも装飾と考えたほうがいいかもしれない。
+
+* 2021/03/15 (月)
+人間が好きなんだか、嫌いなんだかよくわからない。
+
+* 2021/03/14 (日)
+Dragon marked for death を12時間くらい遊んでいた。プレイがうまくなってきてLV55のキャラクターでLV90のラスボスを倒すことが出来た。巫女が強い。
 * 2021/03/13 (土)
 
 #+begin_src scss
