--- a/orgfiles/a-tour-of-go.org
+++ b/orgfiles/a-tour-of-go.org
@@ -376,3 +376,162 @@ func main() {
 おそらく、定数の場合はコンパイルされた時点でただの値と置き換えられるので needInt や needFloat の呼び出しのときに適切に変換されるのだと思う。
 
 たとえ定数であってもプログラムを書き換えて ~const Small float64 = 2~ のように型を明示すると needInt を呼び出すことができなくなる。
+* For
+
+for 文は、初期化、繰り返し条件、後処理をまとめて一行に書く。初期化で変数を宣言すると、for 文のスコープ内でだけ利用できる。
+
+#+begin_src go
+package main
+
+import "fmt"
+
+func main() {
+	sum := 0
+	for i := 0; i < 10; i++ {
+		sum += i
+	}
+	fmt.Println(sum)
+}
+#+end_src
+
+* For continued
+
+初期化と後処理ステートメントは省略できる。下のプログラムは変数 sum が 2048 になるまで sum を2倍にしつづける。
+
+#+begin_src go
+package main
+
+import "fmt"
+
+func main() {
+	sum := 1
+	for ; sum < 2048; {
+		sum += sum
+	}
+	fmt.Println(sum)
+}
+#+end_src
+
+* For is Go's "while"
+
+セミコロンも省略することもできる。下のプログラムはさっきのプログラムのセミコロン省略したバージョン。この記法があるため、while キーワードは存在しない。
+
+#+begin_src go
+package main
+
+import "fmt"
+
+func main() {
+	sum := 1
+	for sum < 1000 {
+		sum += sum
+	}
+	fmt.Println(sum)
+}
+#+end_src
+
+* Forever
+
+終了条件も省略することができる。無限ループを書くときに使う。下記のプログラムは終わらないので実行しては駄目。
+
+#+begin_src go
+package main
+
+func main() {
+	for {
+	}
+}
+#+end_src
+
+* If
+
+if 文はよくあるやつでカッコは不要。下のプログラムは関数 sqrt を定義している。引数が正の数なら math ライブラリに任せる。引数が負の数なら、虚数風に表現した文字列を返す。
+
+#+begin_src go
+package main
+
+import (
+	"fmt"
+	"math"
+)
+
+func sqrt(x float64) string {
+	if x < 0 {
+		return sqrt(-x) + "i"
+	}
+	return fmt.Sprint(math.Sqrt(x))
+}
+
+func main() {
+	fmt.Println(sqrt(2), sqrt(-4))
+}
+#+end_src
+
+この if 文を入れなかった場合はプログラムは `Program exited: status 137.` を出力して終了する。Sqrt 関数に負の数値を与えると NaN になってしまい、それを出力しようとして、エラーになるようだ。
+
+* If with a short statement
+
+go では if 文の条件式の前に、途中計算式を書くこともできる。下のプログラムは関数 pow を定義している。引数 x を n 乗した数を計算して、 lim を超えているなら lim を返す。
+
+if 文の条件式の前で v を初期化していることに注目。
+
+#+begin_src go
+package main
+
+import (
+	"fmt"
+	"math"
+)
+
+func pow(x, n, lim float64) float64 {
+	if v := math.Pow(x, n); v < lim {
+		return v
+	}
+	return lim
+}
+
+func main() {
+	fmt.Println(
+		pow(3, 2, 10),
+		pow(3, 3, 20),
+	)
+}
+
+#+end_src
+* If and else
+
+if 文に対して else 文もある。if 文の冒頭で宣言した変数は else 文の中でも使うことができる。
+下のプログラムは if 文の冒頭で v を宣言しているが else の中でもその変数を利用している。
+
+#+begin_src go
+package main
+
+import (
+	"fmt"
+	"math"
+)
+
+func pow(x, n, lim float64) float64 {
+	if v := math.Pow(x, n); v < lim {
+		return v
+	} else {
+		fmt.Printf("%g >= %g\n", v, lim)
+	}
+	// can't use v here, though
+	return lim
+}
+
+func main() {
+	fmt.Println(
+		pow(3, 2, 10),
+		pow(3, 3, 20),
+	)
+}
+#+end_src
+
+実行すると9と20を出力。3^3は27で、20より大きいので切り下げされる。
+
+* Exercise: Loops and Functions
+
+任意の数値 x に対する、その平方根を z とする。
+平方根をニュートン法で計算する Sqrt 関数を自分で作ってみる。
