もっとわかりやすい計算方法があった

--- a/orgfiles/ニュートン法.org
+++ b/orgfiles/ニュートン法.org
@@ -1,5 +1,7 @@
 #+TAGS: math
 
+https://ja.wikipedia.org/wiki/%E3%83%8B%E3%83%A5%E3%83%BC%E3%83%88%E3%83%B3%E6%B3%95
+
 下記の式を満たす x を求めることを考えてみる。
 
 \[ f(x) = 0 \]
@@ -16,42 +18,27 @@
 
 \[ f'(x_n) \]
 
-そして接線は点
-
-\[(x_n, f(x_n)) \]
-
-を通過するから接線は下の等式を満たす。
-
-\[ f(x_n) = f'(x_n) x_n + b \]
-
-ここから切片を計算すると
-
-\[ b = f(x_n) - f'(x_n) x_n \]
-
-である。これで傾きと切片がわかったので、接線の式が求まる。
-さらにx切片を x_{n+1} と定めると、接線は下記の点を通る。
-
-\[ (x_{n+1}, 0) \]
-
-これを接線の式に当てはめて計算する。
+そして接線は二つの点を通過する。
 
 \begin{align}
-                y &= f'(x_n) x + f(x_n) - f'(x_n) x_n \\
-                0 &= f'(x_n) x_{n+1} + f(x_n) - f'(x_n) x_n \\
-  f'(x_n) x_{n+1} &= - f(x_n) + f'(x_n) x_n \\
-          x_{n+1} &= - \frac{f(x_n)}{f'(x_n)} + x_n \\
+  (x_n, f(x_n)) \\
+  (x_{n+1}, 0)
 \end{align}
 
-これを並び替えると、下記の漸化式が完成する。
+二つの点から計算した傾きと導関数は一致するから
 
-\[ x_{n+1} = x_n - \frac{f(x_n)}{f'(x_n)} \]
+\begin{align}
+          f'(x_n) &= \frac{ 0 - f(x_n)}{ x_{n+1} - x_n } \\
+    x_{n+1} - x_n &= - \frac{ f(x_n) }{ f'(x_n) } \\
+    x_{n+1}       &= x_n - \frac{ f(x_n) }{ f'(x_n) } \tag{1}
+\end{align}
 
-この式は、推定値からある数
+こうして完成した漸化式は、推定値からある数
 
 \[ \frac{f(x_n)}{f'(x_n)} \]
 
 を差し引くとより精度の良い推定値が計算できることを表している。
-この漸化式を使えば、平方根を計算することができる。たとえば
+最後に a の平方根を計算してみよう。
 
 \begin{align}
  \sqrt{a} &= x \\
@@ -63,7 +50,11 @@
 
 \[ f(x) = x^2 - a \]
 
-この関数に対してニュートン法を使えば a の平方根を求められる。
+この関数に対して式(1)の漸化式を繰り返し使えば a の平方根を求められる。
 もっと具体的な例は wikipedia にある。
 
-https://ja.wikipedia.org/wiki/%E3%83%8B%E3%83%A5%E3%83%BC%E3%83%88%E3%83%B3%E6%B3%95
+
+* 疑問
+
+- いかなる関数に対してもニュートン法は使えるのか？
+- いかなる初期値に対しても漸化式は収束するのか？
