日記を書いた

--- a/orgfiles/ニュートン法.org
+++ b/orgfiles/ニュートン法.org
@@ -1,29 +1,30 @@
-#+TAGS: math
+#+TAGS: study
 
 https://ja.wikipedia.org/wiki/%E3%83%8B%E3%83%A5%E3%83%BC%E3%83%88%E3%83%B3%E6%B3%95
 
-下記の式を満たす x を求めることを考えてみる。
+* ニュートン・ラフソン法
+
+下記の式を満たす $x$ を求めることを考えてみる。
 
 \[ f(x) = 0 \]
 
-適当な予想値
+まず、適当な推定値を $x_n$ とおく。これに対して、次の推定値を $x_{n+1}$ とおき、下記のルールにより計算する。
 
-\[ x_n \]
+#+begin_center
+「$x_{n+1}$ は、$f(x)$ のグラフ上の点 $(x_n, f(x_n))$ における接線の x 切片である」
+#+end_center
 
-に対して、それよりも真の解に近い
+これを繰り返していくと $x$ の近似値を求めることができる。この方法をニュートン・ラフソン法という。
 
-\[ x_{n+1} \]
+* 漸化式
 
-を見つけたい。接線の傾きはその導関数により定まる。
+推定値の選び方を漸化式で表現する。
+
+$x_n$ における $f(x)$ の接線の傾きはその導関数により定まる。
 
 \[ f'(x_n) \]
 
-そして接線は二つの点を通過する。
-
-\begin{align}
-  (x_n, f(x_n)) \\
-  (x_{n+1}, 0)
-\end{align}
+そして接線は二つの点 $(x_n, f(x_n))$ と $(x_{n+1}, 0)$ を通過する。
 
 二つの点から計算した傾きと導関数は一致するから
 
@@ -38,7 +39,10 @@ https://ja.wikipedia.org/wiki/%E3%83%8B%E3%83%A5%E3%83%BC%E3%83%88%E3%83%B3%E6%B
 \[ \frac{f(x_n)}{f'(x_n)} \]
 
 を差し引くとより精度の良い推定値が計算できることを表している。
-最後に a の平方根を計算してみよう。
+
+* 平方根を計算する例
+
+最後に平方根を計算してみよう。 $\sqrt{a}=x$ とおく。
 
 \begin{align}
  \sqrt{a} &= x \\
@@ -46,15 +50,20 @@ https://ja.wikipedia.org/wiki/%E3%83%8B%E3%83%A5%E3%83%BC%E3%83%88%E3%83%B3%E6%B
         0 &= x^2 - a \\
 \end{align}
 
-であることから
+この等式から、 $x$ を変数とする関数を下記のように定める。
 
 \[ f(x) = x^2 - a \]
 
 この関数に対して式(1)の漸化式を繰り返し使えば a の平方根を求められる。
-もっと具体的な例は wikipedia にある。
 
+たとえば $a = 2$ で最初の推定値 $x_0 = 1$ とすると
 
-* 疑問
+\begin{align}
+x_0 &= 1 \\
+x_1 &= 1.5 \\
+x_2 &= 1.416666… \\
+x_3 &= 1.4142156862745… \\
+x_4 &= 1.4142135623746899… \\
+\end{align}
 
-- いかなる関数に対してもニュートン法は使えるのか？
-- いかなる初期値に対しても漸化式は収束するのか？
+となり $x_n$ の $n$ が大きくなるほど $\sqrt{2}$ の真の値に近づいていることがわかる。
