--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,3 +1,25 @@
+* 2021/04/04 (日)
+真面目にインライン数式に対応した。 $f(x)=x^2+4$ こんなふうに書ける。ただそれでも mathjax 数式に日本語を埋め込むと表示が壊れる。フォントがおかしいのだろうか。mathjax 3 ではフォントをサポートしてないらしい。それが原因かもしれない。
+
+* 2021/04/03 (土)
+会社は共同体ではあるけれど、愛を捧げる対象ではありえないと思っている。だから、仕事をうまくやるための努力はするけれど、気乗りしないことはなるべくやらない。
+
+* 2021/04/02 (金)
+悩み相談をしているときは、聞き手は答えを出さないほうが良いらしい。悩んでいる人自身が答えを出すことが大事なのだそうだ。
+
+採用面接について。せっかく応募してくれた人を不合格にしてしまった。応募した人がその後どうするのかはわからないが、きっと落胆しているに違いない。もしかするとそれによって人生が大きく変わってしまったかもしれない。そういう責任の重さを感じると、本当に正しい判断を下すことができただろうかと不安になる。その人の良いところを引き出し、観察することができていたか。今となってはわからない。限られた時間ですべてを知ることはできない。
+
+まず一番最初には、採用とは全く無関係の世間話を五分ほどしたほうが良いだろう。普段と違う状況に慣らして落ち着いてもらうため、そしてお互い対等であることを示すためだ。その後、これからどういう観点で面接を評価するのかというのも少し触れておくべきと思う。たとえば、物事を説明する段取り、順序が適切かどうか。用語を正しく使うことができているか。といった点を見ていきますよと宣言する。リラックスしつつも、スイッチをオンにしてくださいということをお願いしておく。
+
+* 2021/04/01 (木)
+「死とは何か」みたいな本を読み始めた。眠すぎて落ちた。
+
+* 2021/03/31 (水)
+髪の毛が硬すぎて、てのひらの皮膚に髪の毛が刺さる。悲しい気持ちになる。
+
+* 2021/03/30 (火)
+なんか息苦しいなあ。
+
 * 2021/03/28 (日)
 orga は ~#+begin_export latex~ のコードブロックは解釈できない。ソースコード見た感じ [[https://github.com/orgapp/orgajs/blob/78231fb20b3bcba42663c21da11cb06f01cab711/packages/oast-to-hast/src/handlers/block.ts#L34][oast-to-hast/src/handlers/block.ts]] であれこれできたらうまくいきそうな気がする。しかしもとが typescript なので、簡単にパッチでどうにかするのは無理そう。小細工をして mathjax をねじ込み、数式対応できた。下のような感じ。
 
